--- a/src/assets/styles/mixins.styl
+++ b/src/assets/styles/mixins.styl
@@ -1,4 +1,8 @@
-ellipsis()
-  overflow: hidden
-  white-space: nowrap
+ellipsis() {
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis
+}
+
+
+
